Migrate HTTP layer from Spark Java to Javalin 6 (issue #38) (#43)
* Add Java version migration research document for issue #25

Captures compatibility analysis across four scenarios (host on Java 17+,
host on Java 8, IBS upgraded to Java 17, why not Java 21) and a
recommended two-step migration path: Java 17 classifier JAR first,
Spring Boot 3.x replacement second.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Expand Java migration research with compatibility matrix, LTS analysis, and revised two-priority plan

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Update files-to-change section to reflect Javalin migration scope

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Migrate HTTP layer from Spark Java to Javalin 6 (issue #38)

- Replace spark-core 2.9.4 + javax.servlet-api with javalin 6.3.0 + ssl-plugin 6.3.0
- Rewrite IntegroAPI: Spark static DSL → Javalin instance API; multipart via
  jakarta.servlet Part; SSL via SslPlugin; startServices() now returns Javalin instance
- Update MCPRequestHandler: handle(Request, Response) → handle(Context)
- Add setAccessible(true) in CallContent for Java 17+ strong encapsulation
- Update 4 test files: replace Spark.awaitInitialization/stop with Javalin app.stop()

All 279 tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Add tests to improve patch coverage for Javalin migration

- MCPRequestHandler: cover parse error (malformed JSON), missing method field,
  missing tool name, and .well-known/oauth-authorization-server endpoint
- IntegroAPI: cover IBSRunTimeException handler via invalid DURATION assertion key

284 tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Update docs for Javalin 6 migration (issue #38)

- README.md: replace Spark/javax.servlet conflict note with Javalin 6 / jakarta.servlet guidance
- docs/Technical.md: add HTTP Framework section documenting Javalin 6, Jetty 11, and migration differences from Spark
- docs/JavaMig